<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="text_create_account">Si aún no tienes cuenta, regístrate aquí.</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="text_go_login">Si ya dispones de una cuenta, inicia sesión aquí.</string>
    <string name="btn_signup">Registrarme</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="toolbar_title_home">Inicio</string>
    <string name="text_twittear">Twittear</string>
    <string name="text_message_tweet">¿Qué está pasando?</string>
    <string name="cancel_tweet">Cancelar Tweet</string>
    <string name="message_cancel_tweet">¿Desea cancelar el tweet? El tweet se eliminará</string>
    <string name="remove_tweet">Eliminar</string>
    <string name="cancel_option">Cancelar</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_tweet_btn">Eliminar tweet</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="email">Email</string>
    <string name="current_password">Contraseña actual</string>
    <string name="button_save">Guardar</string>
    <string name="change_password">Modificar contraseña</string>
    <string name="website">Website</string>
    <string name="descripcion_e_intereses">Descripción e intereses</string>

</resources>
